# plane

./: .gitignore  CMakeLists.txt  Texture.h  assets.txt
.cache/clangd/index/: Aircraft.cpp.DF76B6409622FC34.idx  Aircraft.h.00A2DEB6FDC4C1BA.idx  Entity.cpp.BEACC4F67AF66A38.idx  Entity.h.8E525A888088AD00.idx  Game.cpp.A4ED8F929C6A0041.idx  Game.h.B0928599055C0740.idx  Resource.cpp.3FF824761CBFA696.idx  Resource.h.FC3D78EE65652F0B.idx  SceneNode.cpp.30CF95AA8362AEF6.idx  SceneNode.h.481B22909A744996.idx  Texture.cpp.81291A9E2EFC10D2.idx  Texture.h.7BE0C1ADD2CA6A97.idx  main.cpp.4700BE4AE7CAF4CE.idx
src/: Aircraft.cpp  Aircraft.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.h  Resource.cpp  Resource.h  SceneNode.cpp  SceneNode.h  Texture.cpp  Texture.h  main.cpp
